[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/ships_and_bullets.png" type="Texture" id=2]

[node name="Player" type="Area2D"]

z_index = 1
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2874, 62, 134, 131 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="FirePosition1" type="Position2D" parent="." index="1"]

position = Vector2( 10.4111, -33.9442 )
_sections_unfolded = [ "Transform" ]

[node name="FirePosition2" type="Position2D" parent="." index="2"]

position = Vector2( 10.579, 34.3516 )
_sections_unfolded = [ "Transform" ]

[node name="ShootCooldown" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="." index="4"]

rotation = 1.57016
build_mode = 0
polygon = PoolVector2Array( -1.76228, -46.5419, 2.35003, -46.4108, 5.68955, -43.5814, 5.95859, -31.0728, 9.02002, -26.4871, 9.01415, -17.2343, 13.7658, -11.9622, 14.9144, 0.63269, 24.6812, 0.7674, 27.6417, -6.68443, 27.7764, -16.4513, 31.1205, -20.8186, 34.2052, -21.4592, 36.9034, -20.5579, 39.5999, -16.9578, 40.1073, -6.54801, 45.4983, 3.73639, 45.7462, 18.1299, 39.4458, 23.2664, 28.394, 23.0024, 21.7656, 19.047, 17.2136, 22.7382, 22.6082, 27.2396, 22.2181, 34.436, 19.3892, 37.0045, 14.2487, 37.0012, 8.91437, 36.7817, 8.58858, 45.865, -8.11792, 45.7259, -8.82032, 36.7817, -14.6664, 36.8544, -19.4213, 36.7228, -22.3755, 34.2792, -22.6283, 27.5964, -16.9708, 22.9736, -21.9286, 19.304, -27.252, 23.2241, -38.8178, 22.8312, -45.1122, 18.5863, -45.0608, 4.78216, -39.4062, -5.88436, -39.4361, -15.4658, -36.9914, -20.0907, -34.0346, -21.7595, -30.1801, -20.3434, -27.3558, -15.7152, -27.4897, -7.10495, -23.8963, 0.608064, -14.6435, 0.742448, -13.6077, -11.4656, -8.97723, -17.7597, -8.97176, -26.37, -6.12157, -31.2013, -5.36241, -43.7169 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]

[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]


